autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -2,28 +2,28 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: {{ .Values.name }}
-  name: {{ .Values.name }}
+    app: "{{ .Values.name }}"
+  name: "{{ .Values.name }}"
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}
+    app: "{{ .Values.name }}"
   strategy:
     activeDeadlineSeconds: 21600
     resources:
       limits:
-        cpu: {{ .Values.cpu_limit }}
-        memory: {{ .Values.memory_limit }}
+        cpu: "{{ .Values.cpu_limit }}"
+        memory: "{{ .Values.memory_limit }}"
       requests:
-        cpu: {{ .Values.cpu_request }}
-        memory: {{ .Values.memory_request }}
+        cpu: "{{ .Values.cpu_request }}"
+        memory: "{{ .Values.memory_request }}"
     rollingParams:
       intervalSeconds: 1
       maxSurge: 25%
       maxUnavailable: 25%
       post:
         execNewPod:
-          containerName: {{ .Values.name }}-postgres
+          containerName: "{{ .Values.name }}-postgres"
           command:
           - /bin/sh
           - -c
@@ -35,7 +35,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}
+        app: "{{ .Values.name }}"
     spec:
       containers:
       - args:
@@ -45,7 +45,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: POSTGRES_HOST_AUTH_METHOD
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -55,12 +55,12 @@ spec:
           valueFrom:
             secretKeyRef:
               key: PYTHONUNBUFFERED
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
               key: REDASH_COOKIE_SECRET
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_DATABASE_URL
           valueFrom:
             secretKeyRef:
@@ -70,26 +70,26 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REDASH_HOST
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_LOG_LEVEL
           valueFrom:
             secretKeyRef:
               key: REDASH_LOG_LEVEL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_REDIS_URL
           valueFrom:
             secretKeyRef:
               key: REDASH_REDIS_URL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_SECRET_KEY
           valueFrom:
             secretKeyRef:
               key: REDASH_SECRET_KEY
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_WEB_WORKERS
           value: "4"
         image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
-        name: {{ .Values.name }}
+        name: "{{ .Values.name }}"
         ports:
         - containerPort: 5000
           protocol: TCP
@@ -100,7 +100,7 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}
+      - "{{ .Values.name }}"
       from:
         kind: ImageStreamTag
         name: "{{ .Values.name }}:{{ .Values.tag_name }}"
@@ -110,18 +110,18 @@ apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: {{ .Values.name }}-adhoc-worker
-  name: {{ .Values.name }}-adhoc-worker
+    app: "{{ .Values.name }}-adhoc-worker"
+  name: "{{ .Values.name }}-adhoc-worker"
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}-adhoc-worker
+    app: "{{ .Values.name }}-adhoc-worker"
   strategy:
     resources: {}
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-adhoc-worker
+        app: "{{ .Values.name }}-adhoc-worker"
     spec:
       containers:
       - args:
@@ -131,7 +131,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: POSTGRES_HOST_AUTH_METHOD
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -141,14 +141,14 @@ spec:
           valueFrom:
             secretKeyRef:
               key: PYTHONUNBUFFERED
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: QUEUES
           value: "queries"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
               key: REDASH_COOKIE_SECRET
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_DATABASE_URL
           valueFrom:
             secretKeyRef:
@@ -158,26 +158,26 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REDASH_HOST
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_LOG_LEVEL
           valueFrom:
             secretKeyRef:
               key: REDASH_LOG_LEVEL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_REDIS_URL
           valueFrom:
             secretKeyRef:
               key: REDASH_REDIS_URL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_SECRET_KEY
           valueFrom:
             secretKeyRef:
               key: REDASH_SECRET_KEY
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: WORKERS_COUNT
           value: "2"
         image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
-        name: {{ .Values.name }}-adhoc-worker
+        name: "{{ .Values.name }}-adhoc-worker"
         resources: {}
       restartPolicy: Always
   test: false
@@ -186,29 +186,29 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}-adhoc-worker
+      - "{{ .Values.name }}-adhoc-worker"
       from:
         kind: ImageStreamTag
         name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: {{ .Values.image_namespace }}
+        namespace: "{{ .Values.image_namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: {{ .Values.name }}-scheduled-worker
-  name: {{ .Values.name }}-scheduled-worker
+    app: "{{ .Values.name }}-scheduled-worker"
+  name: "{{ .Values.name }}-scheduled-worker"
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}-scheduled-worker
+    app: "{{ .Values.name }}-scheduled-worker"
   strategy:
     resources: {}
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-scheduled-worker
+        app: "{{ .Values.name }}-scheduled-worker"
     spec:
       containers:
       - args:
@@ -218,7 +218,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: POSTGRES_HOST_AUTH_METHOD
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -228,14 +228,14 @@ spec:
           valueFrom:
             secretKeyRef:
               key: PYTHONUNBUFFERED
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: QUEUES
           value: "scheduled_queries,schemas"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
               key: REDASH_COOKIE_SECRET
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_DATABASE_URL
           valueFrom:
             secretKeyRef:
@@ -245,25 +245,25 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REDASH_HOST
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_LOG_LEVEL
           valueFrom:
             secretKeyRef:
               key: REDASH_LOG_LEVEL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_REDIS_URL
           valueFrom:
             secretKeyRef:
               key: REDASH_REDIS_URL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_SECRET_KEY
           valueFrom:
             secretKeyRef:
               key: REDASH_SECRET_KEY
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: WORKERS_COUNT
         image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
-        name: {{ .Values.name }}-scheduled-worker
+        name: "{{ .Values.name }}-scheduled-worker"
         resources: {}
         value: "1"
       restartPolicy: Always
@@ -273,29 +273,29 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}-scheduled-worker
+      - "{{ .Values.name }}-scheduled-worker"
       from:
         kind: ImageStreamTag
         name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: {{ .Values.image_namespace }}
+        namespace: "{{ .Values.image_namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: {{ .Values.name }}-scheduler
-  name: {{ .Values.name }}-scheduler
+    app: "{{ .Values.name }}-scheduler"
+  name: "{{ .Values.name }}-scheduler"
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}-scheduler
+    app: "{{ .Values.name }}-scheduler"
   strategy:
     resources: {}
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-scheduler
+        app: "{{ .Values.name }}-scheduler"
     spec:
       containers:
       - args:
@@ -305,7 +305,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: POSTGRES_HOST_AUTH_METHOD
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -315,12 +315,12 @@ spec:
           valueFrom:
             secretKeyRef:
               key: PYTHONUNBUFFERED
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
               key: REDASH_COOKIE_SECRET
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_DATABASE_URL
           valueFrom:
             secretKeyRef:
@@ -330,24 +330,24 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REDASH_HOST
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_LOG_LEVEL
           valueFrom:
             secretKeyRef:
               key: REDASH_LOG_LEVEL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_REDIS_URL
           valueFrom:
             secretKeyRef:
               key: REDASH_REDIS_URL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_SECRET_KEY
           valueFrom:
             secretKeyRef:
               key: REDASH_SECRET_KEY
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
-        name: {{ .Values.name }}-scheduler
+        name: "{{ .Values.name }}-scheduler"
         resources: {}
       restartPolicy: Always
   test: false
@@ -356,29 +356,29 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}-scheduler
+      - "{{ .Values.name }}-scheduler"
       from:
         kind: ImageStreamTag
         name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: {{ .Values.image_namespace }}
+        namespace: "{{ .Values.image_namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
 kind: DeploymentConfig
 metadata:
   labels:
-    app: {{ .Values.name }}-worker
-  name: {{ .Values.name }}-worker
+    app: "{{ .Values.name }}-worker"
+  name: "{{ .Values.name }}-worker"
 spec:
   replicas: 1
   selector:
-    app: {{ .Values.name }}-worker
+    app: "{{ .Values.name }}-worker"
   strategy:
     resources: {}
   template:
     metadata:
       labels:
-        app: {{ .Values.name }}-worker
+        app: "{{ .Values.name }}-worker"
     spec:
       containers:
       - args:
@@ -388,7 +388,7 @@ spec:
           valueFrom:
             secretKeyRef:
               key: POSTGRES_HOST_AUTH_METHOD
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
@@ -398,14 +398,14 @@ spec:
           valueFrom:
             secretKeyRef:
               key: PYTHONUNBUFFERED
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: QUEUES
           value: "periodic emails default"
         - name: REDASH_COOKIE_SECRET
           valueFrom:
             secretKeyRef:
               key: REDASH_COOKIE_SECRET
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_DATABASE_URL
           valueFrom:
             secretKeyRef:
@@ -415,26 +415,26 @@ spec:
           valueFrom:
             secretKeyRef:
               key: REDASH_HOST
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_LOG_LEVEL
           valueFrom:
             secretKeyRef:
               key: REDASH_LOG_LEVEL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_REDIS_URL
           valueFrom:
             secretKeyRef:
               key: REDASH_REDIS_URL
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: REDASH_SECRET_KEY
           valueFrom:
             secretKeyRef:
               key: REDASH_SECRET_KEY
-              name: {{ .Values.name }}
+              name: "{{ .Values.name }}"
         - name: WORKERS_COUNT
           value: "1"
         image: ' '
-        name: {{ .Values.name }}-worker
+        name: "{{ .Values.name }}-worker"
         resources: {}
       restartPolicy: Always
   test: false
@@ -443,9 +443,9 @@ spec:
   - imageChangeParams:
       automatic: true
       containerNames:
-      - {{ .Values.name }}-worker
+      - "{{ .Values.name }}-worker"
       from:
         kind: ImageStreamTag
         name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: {{ .Values.image_namespace }}
+        namespace: "{{ .Values.image_namespace }}"
     type: ImageChange
