--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -23,7 +23,7 @@ spec:
       maxUnavailable: 25%
       post:
         execNewPod:
-          containerName: "{{ .Values.name }}-postgres"
+          containerName: "{{ .Values.name }}-db"
           command:
           - /bin/sh
           - -c
