autobuild forms-flow-analytics

--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -9,7 +9,7 @@ name: forms-flow-analytics
 redash_database_url: postgresql://postgres@postgres/postgres
 redash_host: formsflow.analytics.apps.devops.aot-technologies.com
 redash_redis_url: redis://redis:6379/0
-source_context_dir: /forms-flow-ai/forms-flow-analytics
+source_context_dir: /forms-flow-analytics
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
 tag_name: dev
