autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -88,7 +88,7 @@ spec:
               name: "{{ .Values.name }}"
         - name: REDASH_WEB_WORKERS
           value: "4"
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
         name: "{{ .Values.name }}"
         ports:
         - containerPort: 5000
@@ -103,7 +103,7 @@ spec:
       - "{{ .Values.name }}"
       from:
         kind: ImageStreamTag
-        name: "{{ .Values.name }}:{{ .Values.tag_name }}"
+        name: "{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
@@ -176,7 +176,7 @@ spec:
               name: "{{ .Values.name }}"
         - name: WORKERS_COUNT
           value: "2"
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
         name: "{{ .Values.name }}-adhoc-worker"
         resources: {}
       restartPolicy: Always
@@ -189,8 +189,8 @@ spec:
       - "{{ .Values.name }}-adhoc-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: "{{ .Values.image_namespace }}"
+        name: "{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
+        namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
@@ -263,7 +263,7 @@ spec:
               name: "{{ .Values.name }}"
         - name: WORKERS_COUNT
           value: "1"
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
         name: "{{ .Values.name }}-scheduled-worker"
         resources: {}
       restartPolicy: Always
@@ -276,8 +276,8 @@ spec:
       - "{{ .Values.name }}-scheduled-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: "{{ .Values.image_namespace }}"
+        name: "{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
+        namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
@@ -346,7 +346,7 @@ spec:
             secretKeyRef:
               key: REDASH_SECRET_KEY
               name: "{{ .Values.name }}"
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Values.image_namespace }}/{{ .Values.name }}:{{ .Values.tag_name }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
         name: "{{ .Values.name }}-scheduler"
         resources: {}
       restartPolicy: Always
@@ -359,8 +359,8 @@ spec:
       - "{{ .Values.name }}-scheduler"
       from:
         kind: ImageStreamTag
-        name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: "{{ .Values.image_namespace }}"
+        name: "{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
+        namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
@@ -446,6 +446,6 @@ spec:
       - "{{ .Values.name }}-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Values.name }}:{{ .Values.tag_name }}"
-        namespace: "{{ .Values.image_namespace }}"
+        name: "{{ .Values.redash_image_name }}:{{ .Values.tag_name }}"
+        namespace: "{{ .Release.Namespace }}"
     type: ImageChange
