--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -1,13 +1,14 @@
 analytics_db_resource_name: analytics-postgresql 
 cpu_limit: 750m
 cpu_request: 100m
-image_namespace: formsflow
 image_tag: latest
 memory_limit: 2Gi
 memory_request: 100Mi
 name: forms-flow-analytics
 redash_database_url: postgresql://postgres@postgres/postgres
 redash_host: formsflow.analytics.apps.devops.aot-technologies.com
+redash_image_src: dimaskiddo/debian:redash-7.0
+redash_image_name: redash
 redash_redis_url: redis://redis:6379/0
 source_context_dir: /forms-flow-analytics
 source_repository_ref: master
