--- a/forms-flow-analytics/templates/imagestream.yaml
+++ b/forms-flow-analytics/templates/imagestream.yaml
@@ -1,4 +1,12 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: forms-flow-analytics
+  name: redash
+spec:
+  tags:
+  - from:
+      kind: DockerImage
+      name: "{{ .Values.redash_image_src }}"
+    name: "{{ .Values.tag_name }}"
+    referencePolicy:
+      type: Local
