autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/secret.yaml
+++ b/forms-flow-analytics/templates/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     app: {{ .Values.name }}
-  name: {{ .Values.name }}
+  name: "{{ .Values.analytics_db_resource_name }}-{{ .Values.image_tag }}-secret"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
   PYTHONUNBUFFERED: "0"
