autobuild redash-redis-cluster-dc

--- a/forms-flow-analytics/templates/secret.yaml
+++ b/forms-flow-analytics/templates/secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   creationTimestamp: null
   labels:
-    app: {{ .Values.name }}
-  name: "{{ .Values.analytics_db_resource_name }}-{{ .Values.image_tag }}-secret"
+    app: "{{ .Values.name }}"
+  name: "{{ .Values.name }}"
 stringData:
   POSTGRES_HOST_AUTH_METHOD: trust
   PYTHONUNBUFFERED: "0"
