--- a/forms-flow-analytics/Chart.yaml
+++ b/forms-flow-analytics/Chart.yaml
@@ -1,5 +1,12 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: forms-flow-analytics-postgresql-deploy
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
+  - name: redash-redis-cluster-dc
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-analytics
 tags: forms-flow-analytics
 version: v0.0.1
