--- a/redash-redis-cluster-dc/values.yaml
+++ b/redash-redis-cluster-dc/values.yaml
@@ -4,6 +4,5 @@ docker_path_and_image: redis:6.0.12
 instance: dev
 name: redash-redis
 ram: 1Gi
-redis_exporter_image: oliver006/redis_exporter:v1.14.0-alpine
-redis_exporter_name: redis-exporter 
+redis_exporter_name: oliver006/redis_exporter:v1.14.0-alpine 
 storage: 1Gi
