--- a/redash-redis-cluster-dc/templates/imagestream.yaml
+++ b/redash-redis-cluster-dc/templates/imagestream.yaml
@@ -2,12 +2,12 @@
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: redash
+  name: "{{ .Values.name }}"
 spec:
   tags:
   - from:
       kind: DockerImage
-      name: " {{ .Values.docker_path_and_image }}"
+      name: " {{ .Values.redis_image }}"
     name: "{{ .Values.name }}"
     referencePolicy:
       type: Local
@@ -15,12 +15,12 @@ spec:
 apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
-  name: redash-exporter
+  name: "{{ .Values.redis_exporter_name }}"
 spec:
   tags:
   - from:
       kind: DockerImage
-      name: "registry.hub.docker.com/{{ .Values.redis_exporter_name }}"
+      name: "registry.hub.docker.com/{{ .Values.redis_exporter_image }}"
     name: "{{ .Values.redis_exporter_name }}"
     referencePolicy:
       type: Local
