--- a/redash-redis-cluster-dc/values.yaml
+++ b/redash-redis-cluster-dc/values.yaml
@@ -7,3 +7,4 @@ redis_exporter_image: oliver006/redis_exporter:v1.14.0-alpine
 redis_exporter_name: redash-exporter
 redis_image: redis:6.0.12
 storage: 1Gi
+tag_name: dev
