--- a/redash-redis-cluster-dc/templates/imagestream.yaml
+++ b/redash-redis-cluster-dc/templates/imagestream.yaml
@@ -8,7 +8,7 @@ spec:
   - from:
       kind: DockerImage
       name: "{{ .Values.redis_image }}"
-    name: "{{ .Values.tag_name }}"
+    name: "{{ .Values.instance }}"
     referencePolicy:
       type: Local
 ---
@@ -21,6 +21,6 @@ spec:
   - from:
       kind: DockerImage
       name: "registry.hub.docker.com/{{ .Values.redis_exporter_image }}"
-    name: "{{ .Values.tag_name }}"
+    name: "{{ .Values.instance }}"
     referencePolicy:
       type: Local
