--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -1,4 +1,4 @@
-analytics_db_resource_name: analytics-postgresql 
+analytics_db_resource_name: forms-flow-analytics-postgresql 
 cpu_limit: 750m
 cpu_request: 100m
 image_tag: latest
