--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -38,7 +38,7 @@ spec:
         app: "{{ .Values.name }}"
     spec:
       containers:
-        env:
+      - env:
         - name: POSTGRES_HOST_AUTH_METHOD
           valueFrom:
             secretKeyRef:
