--- a/forms-flow-analytics-postgresql-deploy/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics-postgresql-deploy/templates/deploymentconfig.yaml
@@ -44,7 +44,7 @@ spec:
             secretKeyRef:
               key: DATABASE_ADMIN_PASSWORD
               name: {{ .Values.name }}-{{ .Values.instance }}-secret
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.postgresql_image_name }}:{{ .Values.postgresql_image_tag }}"
+        image: "image-registry.openshift-image-registry.svc:5000/openshift/{{ .Values.postgresql_image_name }}:{{ .Values.postgresql_image_tag }}"
         imagePullPolicy: IfNotPresent
         livenessProbe:
           failureThreshold: 3
