--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -38,7 +38,9 @@ spec:
         app: "{{ .Values.name }}"
     spec:
       containers:
-      - env:
+      - args:
+        - server
+        env:
         - name: POSTGRES_HOST_AUTH_METHOD
           valueFrom:
             secretKeyRef:
