--- a/forms-flow-analytics-postgresql-deploy/values.yaml
+++ b/forms-flow-analytics-postgresql-deploy/values.yaml
@@ -10,6 +10,7 @@ persistent_volume_class: nfs-client
 persistent_volume_size: 1Gi
 postgresql_admin_password: admin
 postgresql_image_name: postgresql
-postgresql_image_tag: 10
+postgresql_image_tag: 12
+postgresql_image_url: registry.redhat.io/rhel8
 postgresql_password: postgresql
 postgresql_test_password: test
