--- a/forms-flow-analytics/templates/imagestream.yaml
+++ b/forms-flow-analytics/templates/imagestream.yaml
@@ -2,3 +2,16 @@ apiVersion: image.openshift.io/v1
 kind: ImageStream
 metadata:
   name: "{{ .Values.name }}"
+---
+apiVersion: image.openshift.io/v1
+kind: ImageStream
+metadata:
+  name: "{{ .Values.redash_image_name }}"
+spec:
+  tags:
+  - from:
+      kind: DockerImage
+      name: "{{ .Values.redash_image_src }}:{{ .Values.image_tag }}"
+    name: "{{ .Values.image_tag }}"
+    referencePolicy:
+      type: Local
