autobuild forms-flow-analytics

--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -7,9 +7,10 @@ memory_request: 100Mi
 name: forms-flow-analytics
 redash_database_url: postgresql://postgres@postgres/postgres
 redash_host: formsflow.analytics.apps.devops.aot-technologies.com
-redash_image_name: aot-redash-reddis
+redash_image_name: forms-flow-analytics-redash 
+redash_image_tag: latest
 redash_image_src: https://github.com/AOT-Technologies/redash
 redash_redis_url: redis://redis:6379/0
-source_context_dir: /forms-flow-analytics
+source_context_dir: /
 source_repository_ref: master
-source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
+source_repository_url: https://github.com/AOT-Technologies/redash
