--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -88,7 +88,7 @@ spec:
               name: "{{ .Values.name }}"
         - name: REDASH_WEB_WORKERS
           value: "4"
-        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.image_tag }}"
+        image: "image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Values.redash_image_name }}:{{ .Values.redash_image_tag }}"
         name: "{{ .Values.name }}"
         ports:
         - containerPort: 5000
