--- a/forms-flow-analytics/values.yaml
+++ b/forms-flow-analytics/values.yaml
@@ -10,7 +10,7 @@ redash_host: formsflow.analytics.apps.devops.aot-technologies.com
 redash_image_name: forms-flow-analytics-redash 
 redash_image_tag: latest
 redash_image_src: https://github.com/AOT-Technologies/redash
-redash_redis_url: redis://redis:6379/0
+redash_redis_url: redis://redash-redis-latest:6379/0
 source_context_dir: /
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/redash
