autobuild forms-flow-analytics

--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -23,7 +23,7 @@ spec:
       maxUnavailable: 25%
       post:
         execNewPod:
-          containerName: "{{ .Values.analytics_db_resource_name }}-{{ .Values.image_tag }}"
+          containerName: "{{ .Values.name }}"
           command:
           - /bin/sh
           - -c
