--- a/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   replicas: 1
   selector:
-    app: "{{ .Values.name }}"
+    app: "{{ .Values.name }}-server"
   strategy:
     activeDeadlineSeconds: 21600
     resources:
