--- a/forms-flow-ai/Chart.yaml
+++ b/forms-flow-ai/Chart.yaml
@@ -1,10 +1,10 @@
 ---
 apiVersion: v2
 dependencies:
-  - name: formio-mongodb
+  - name: camunda-postgres
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: forms-flow-forms
+  - name: formio-mongodb
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
   - name: forms-flow-analytics
@@ -13,7 +13,10 @@ dependencies:
   - name: forms-flow-bpm
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
-  - name: camunda-postgres
+  - name: forms-flow-forms
+    version: "v0.0.1"
+    repository: "https://cberg-aot.github.io/helm-charts/"
+  - name: forms-flow-idm
     version: "v0.0.1"
     repository: "https://cberg-aot.github.io/helm-charts/"
 name: forms-flow-ai
