autobuild forms-flow-idm

--- a/forms-flow-idm/values.yaml
+++ b/forms-flow-idm/values.yaml
@@ -24,6 +24,9 @@ keycloak:
   podSecurityContext: 
     fsGroup: 1000650000
   
+  postgresql:
+    runAsUser: "auto"
+  
   route:
     enabled: true
     path:  /
